Fix z-index for date picker.

--- a/final_project/public/css/sb-admin-2.css
+++ b/final_project/public/css/sb-admin-2.css
@@ -41,6 +41,8 @@ h1,h2,h3,h4,body {
     font-weight: 400;
 }
 
+#datepicker {position: relative; z-index:9999;}
+
 .navbar-top-links {
     margin-right: 0;
 }
